syntax = "proto3";
package org.eclipse.kura.core.message.protobuf;

message KuraPayload {
  int64 timestamp = 1;
  KuraPosition position = 2;
  bytes body = 3;
  repeated KuraMetric metric = 4;

  message KuraPosition {
    double latitude = 1;
    double longitude = 2;
    double altitude = 3;
    double precision = 4;
    double heading = 5;
    double speed = 6;
    int64 timestamp = 7;
    int32 satellites = 8;
    int32 status = 9;
  }

  message KuraMetric {
    enum ValueType {
      STRING = 0;
      DOUBLE = 1;
      INT32 = 2;
      FLOAT = 3;
      INT64 = 4;
      BOOL = 5;
      BYTES = 6;
    }

    string name = 1;
    ValueType type = 2;

    // 각 타입별 필드
    string string_value = 3;
    double double_value = 4;
    int32 int_value = 5;
    float float_value = 6;
    int64 long_value = 7;
    bool bool_value = 8;
    bytes bytes_value = 9;
  }
}